--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vehical Rental</title>
 
-    <!--importing global css for the whole app -->
-    <link rel="stylesheet" href="global.style.css" />
     <!-- angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
    
@@ -45,84 +43,84 @@
 
 
     <!-- importing the app.js which has the main Controller for whole application -->
-    <script src="app.controller.js"></script>
+    <script src="/frontend/src/app.controller.js"></script>
     <!--importing the admin controller-->
-    <script src="/src/components/admin/admin.controller.js"></script>
+    <script src="/frontend/src/components/admin/admin.controller.js"></script>
 
     <!--importing the analytics controller-->
-    <script src="/src/components/admin/Analytics/analytics.controller.js"></script>
+    <script src="/frontend/src/components/admin/Analytics/analytics.controller.js"></script>
     <!--importing the car controller-->
-    <script src="/src/components/admin/carApprovals/carController.js"></script>
+    <script src="/frontend/src/components/admin/carApprovals/carController.js"></script>
     <!--importing the home controller-->
-    <script src="/src/components/home/home.controller.js"></script>
+    <script src="/frontend/src/components/home/home.controller.js"></script>
     <!--importing the single Car controller-->
-    <script src="/src/components/car/singleCar.controller.js"></script>
+    <script src="/frontend/src/components/car/singleCar.controller.js"></script>
     <!--importing the signup controller -->
-    <script src="/src/components/auth/signup.controller.js"></script>
+    <script src="/frontend/src/components/auth/signup.controller.js"></script>
     <!--importing the login controller -->
-    <script src="/src/components/auth/login.controller.js"></script>
+    <script src="/frontend/src/components/auth/login.controller.js"></script>
     <!--importing the owner Booking controller -->
-    <script src="/src/components/booking/ownerBookings/ownerBookings.controller.js"></script>
+    <script src="/frontend/src/components/booking/ownerBookings/ownerBookings.controller.js"></script>
     <!-- importing the add Car controller  -->
-    <script src="/src/components/car/addCarController.js"></script>
+    <script src="/frontend/src/components/car/addCarController.js"></script>
     <!--importing the myProfile controller -->
-    <script src="/src/components/profile/myProfile.controller.js"></script>
+    <script src="/frontend/src/components/profile/myProfile.controller.js"></script>
     <!--importing the userManagement controller-->
-    <script src="/src/components/admin/userManagement/userManagement.controller.js"></script>
+    <script src="/frontend/src/components/admin/userManagement/userManagement.controller.js"></script>
     <!--importing the conversations contorller-->
-    <script src="/src/components/conversations/conversations.controller.js"></script>
+    <script src="/frontend/src/components/conversations/conversations.controller.js"></script>
     <!--importing the owner confirmed booking controller -->
-    <script src="/src/components/booking/ownerBookings/confirmedBookings.controller.js"></script>
+    <script src="/frontend/src/components/booking/ownerBookings/confirmedBookings.controller.js"></script>
     <!--importing the myBiddings controller -->
-    <script src="/src/components/booking/userBookings/myBiddings.controller.js"></script>
+    <script src="/frontend/src/components/booking/userBookings/myBiddings.controller.js"></script>
     <!--importing the user  booking controller -->
-    <script src="/src/components/booking/userBookings/userBookings.controller.js"></script>
+    <script src="/frontend/src/components/booking/userBookings/userBookings.controller.js"></script>
     <!--importing the manageBookings controller-->
-    <script src="/src/components/booking/ownerBookings/manageBookings.controller.js"></script>
+    <script src="/frontend/src/components/booking/ownerBookings/manageBookings.controller.js"></script>
     <!--importing the sellerAnalytics controller-->
-    <script src="/src/components/sellerAnalytics/sellerAnalytics.controller.js"></script>
+    <script src="/frontend/src/components/sellerAnalytics/sellerAnalytics.controller.js"></script>
     <!--importing the bookingsHistory controller-->
-    <script src="/src/components/booking/userBookings/bookingsHistory.controller.js"></script>
+    <script src="/frontend/src/components/booking/userBookings/bookingsHistory.controller.js"></script>
 
     <!--importing the app routes -->
-    <script src="routes/app.routes.js"></script>
+    <script src="/frontend/src/routes/app.routes.js"></script>
 
     <!--importing the IDB service -->
-    <script src="/src/services/IDB.service.js"></script>
+    <script src="/frontend/src/services/IDB.service.js"></script>
     <!--importing the route protection service-->
-    <script src="/src/services/routeProtection.service.js"></script>
+    <script src="/frontend/src/services/routeProtection.service.js"></script>
     <!--importing the auth service-->
-    <script src="/src/services/Auth.service.js"></script>
+    <script src="/frontend/src/services/Auth.service.js"></script>
     <!--importing the Toast service-->
-    <script src="/src/services/Toast.service.js"></script>
+    <script src="/frontend/src/services/Toast.service.js"></script>
     <!--importing the chart service-->
-    <script src="/src/services/Chart.service.js"></script>
+    <script src="/frontend/src/services/Chart.service.js"></script>
 
 
 
     
     <!--factory for hashing the password-->
-    <script src="/src/factories/hashPassword.js"></script>
+    <script src="/frontend/src/factories/hashPassword.js"></script>
     <!--importing the factory for calculating the booking price-->
-    <script src="/src/factories/Booking.js"></script>
+    <script src="/frontend/src/factories/Booking.js"></script>
     <!--importing the factory for getting the isValid bidding details-->
-    <script src="/src/factories/Bidding.js"></script>
+    <script src="/frontend/src/factories/Bidding.js"></script>
     <!--importing the factory for car validation-->
-    <script src="/src/factories/carValidations.js" ></script>
+    <script src="/frontend/src/factories/carValidations.js" ></script>
     <!--importing the factory for review validation and other functions-->
-    <script src="/src/factories/Review.js"></script>
+    <script src="/frontend/src/factories/Review.js"></script>
     <!--importing the factory for the Buttons-->
-    <script src="/src/factories/Button.js"></script>
+    <script src="/frontend/src/factories/Button.js"></script>
     
   
     <!--importing the car filters-->
-    <script src="/src/filters/carFilters.js"></script>
+    <script src="/frontend/src/filters/carFilters.js"></script>
     <!--importing the owner Bookings filter-->
-    <script src="/src/filters/ownerBooking.js"></script>
+    <script src="/frontend/src/filters/ownerBooking.js"></script>
     <!--importing the confirmed booking filter-->
-    <script src="/src/filters/confirmedBookingsFilter.js"></script>
+    <script src="/frontend/src/filters/confirmedBookingsFilter.js"></script>
     <!--importing the userBookings filter-->
-    <script src="/src/filters/userBookings.js"></script>
+    <script src="/frontend/src/filters/userBookings.js"></script>
 
     <!--importing the bootstrap css-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
