implemented the s3 storage and addCarRoute

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -95,6 +95,8 @@
     <script src="/frontend/src/services/Toast.service.js"></script>
     <!--importing the chart service-->
     <script src="/frontend/src/services/Chart.service.js"></script>
+    <!--importing the api service-->
+    <script src="/frontend/src/services/Api.service.js"></script>
 
 
 
