--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -97,6 +97,8 @@
     <script src="/frontend/src/services/Chart.service.js"></script>
     <!--importing the api service-->
     <script src="/frontend/src/services/Api.service.js"></script>
+    <!--importing the car service-->
+    <script src="/frontend/src/services/Car.service.js"></script>
 
 
 
