--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -99,6 +99,8 @@
     <script src="/frontend/src/services/Api.service.js"></script>
     <!--importing the car service-->
     <script src="/frontend/src/services/Car.service.js"></script>
+    <!--importing the bidding service-->
+    <script src="/frontend/src/services/Bidding.service.js"></script>
 
 
 
