changed the route protection login on the frontend

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -40,6 +40,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!--importing the js for the toastify library-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!--importing the font awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <!-- importing the app.js which has the main Controller for whole application -->
@@ -101,7 +103,8 @@
     <script src="/frontend/src/services/Car.service.js"></script>
     <!--importing the bidding service-->
     <script src="/frontend/src/services/Bidding.service.js"></script>
-
+    <!--importing the user service-->
+    <script src="/frontend/src/services/User.service.js"></script>
 
 
     
