--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -92,6 +92,8 @@ https://cdn.jsdelivr.net/npm/nodemailer@6.10.0/lib/nodemailer.min.js
     <script src="/frontend/src/components/sellerAnalytics/sellerAnalytics.controller.js"></script>
     <!--importing the bookingsHistory controller-->
     <script src="/frontend/src/components/booking/userBookings/bookingsHistory.controller.js"></script>
+    <!--importing the bookingModal controller-->
+    <script src="/frontend/src/components/profile/bookingModal.controller.js"></script>
 
     <!--importing the app routes -->
     <script src="/frontend/src/routes/app.routes.js"></script>
@@ -132,6 +134,8 @@ https://cdn.jsdelivr.net/npm/nodemailer@6.10.0/lib/nodemailer.min.js
     <script src="/frontend/src/factories/Review.js"></script>
     <!--importing the factory for the Buttons-->
     <script src="/frontend/src/factories/Button.js"></script>
+    <!--importing the factory for the user -->
+    <script src="/frontend/src/factories/User.js"></script>
     
   
     <!--importing the car filters-->
@@ -144,6 +148,8 @@ https://cdn.jsdelivr.net/npm/nodemailer@6.10.0/lib/nodemailer.min.js
     <script src="/frontend/src/filters/userBookings.js"></script>
 
     <!--importing the bootstrap css-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.6/ui-bootstrap-tpls.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <link
       rel="stylesheet"
