--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -23,6 +23,9 @@
       href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <!--color theif library for picking the color from the images-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.2/color-thief.umd.js"></script>
+
 
 
   
@@ -106,8 +109,6 @@ https://cdn.jsdelivr.net/npm/nodemailer@6.10.0/lib/nodemailer.min.js
     <!--importing the app routes -->
     <script src="/frontend/src/routes/app.routes.js"></script>
 
-    <!--importing the IDB service -->
-    <script src="/frontend/src/services/IDB.service.js"></script>
     <!--importing the route protection service-->
     <script src="/frontend/src/services/routeProtection.service.js"></script>
     <!--importing the auth service-->
@@ -130,31 +131,17 @@ https://cdn.jsdelivr.net/npm/nodemailer@6.10.0/lib/nodemailer.min.js
     <script src="/frontend/src/services/City.service.js"></script>
 
 
-
-    
-
-    <!--importing the factory for calculating the booking price-->
-    <script src="/frontend/src/factories/Booking.js"></script>
     <!--importing the factory for getting the isValid bidding details-->
     <script src="/frontend/src/factories/Bidding.js"></script>
     <!--importing the factory for car validation-->
     <script src="/frontend/src/factories/Car.js"></script>
     <!--importing the factory for review validation and other functions-->
     <script src="/frontend/src/factories/Review.js"></script>
-    <!--importing the factory for the Buttons-->
-    <script src="/frontend/src/factories/Button.js"></script>
+
+
     <!--importing the factory for the user -->
     <script src="/frontend/src/factories/User.js"></script>
     
-  
-    <!--importing the car filters-->
-    <script src="/frontend/src/filters/carFilters.js"></script>
-    <!--importing the owner Bookings filter-->
-    <script src="/frontend/src/filters/ownerBooking.js"></script>
-    <!--importing the confirmed booking filter-->
-    <script src="/frontend/src/filters/confirmedBookingsFilter.js"></script>
-    <!--importing the userBookings filter-->
-    <script src="/frontend/src/filters/userBookings.js"></script>
 
     <!--importing the bootstrap css-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
