--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -83,7 +83,7 @@ https://cdn.jsdelivr.net/npm/nodemailer@6.10.0/lib/nodemailer.min.js
     <!--importing the login controller -->
     <script src="/frontend/src/components/auth/login.controller.js"></script>
     <!--importing the owner Booking controller -->
-    <script src="/frontend/src/components/booking/ownerBookings/ownerBookings.controller.js"></script>
+    <script src="/frontend/src/components/booking/ownerBookings/ownerBiddings.controller.js"></script>
     <!-- importing the add Car controller  -->
     <script src="/frontend/src/components/car/addCarController.js"></script>
     <!--importing the myProfile controller -->
@@ -129,6 +129,8 @@ https://cdn.jsdelivr.net/npm/nodemailer@6.10.0/lib/nodemailer.min.js
     <script src="/frontend/src/services/Chat.service.js"></script>
     <!--importing the city service-->
     <script src="/frontend/src/services/City.service.js"></script>
+    <!--importing the socket service-->
+    <script src="/frontend/src/services/Socket.service.js"></script>
 
 
     <!--importing the factory for getting the isValid bidding details-->
@@ -152,8 +154,6 @@ https://cdn.jsdelivr.net/npm/nodemailer@6.10.0/lib/nodemailer.min.js
       href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
     />
     <!-- angular material -->
-     <!--mera hai mera hai -->
-      <!--mera hai mera hai -->
     <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
    
     
