--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vehical Rental</title>
+    <title>Car.com - Vehicle Rental</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="/frontend/public/assets/carRentlogo.jpeg">
 
     <!-- angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
@@ -67,6 +69,8 @@ https://cdn.jsdelivr.net/npm/nodemailer@6.10.0/lib/nodemailer.min.js
     <script src="/frontend/src/app.controller.js"></script>
      <!--importing the back button component-->
    <script src="/frontend/src/angularComponents/backButton.js"></script>
+   <!--importing the loading component-->
+   <script src="/frontend/src/angularComponents/loadingComponent.js"></script>
     <!--importing the admin controller-->
     <script src="/frontend/src/components/admin/admin.controller.js"></script>
 
